Removed image of me for a better one

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
 
     <hr>
 
-    <!-- TODO: Add better image of me -->
+    <!-- TODO: Add image of me -->
     <section id="about">
       <div class="container">
         <h2 class="section-title ">About Me</h2>
@@ -68,7 +68,7 @@
                   class="img-fluid rounded shadow-lg"
                   height="auto"
                   width="400px"
-                  src="assets/me.jpg"
+                  src="#"
                   alt="Profile Image"
                 />
               </div>
@@ -119,9 +119,7 @@
                   </p>
                   <!-- <h1 class="pt-3 pb-4">tech</h1> -->
                   <div class="pb-4 pt-4">
-                    <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                      <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                    </a>
+                    <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
                   </div>
                 </div>
                 <a
@@ -184,9 +182,7 @@
                 </p>
                 <!-- <h1 class="pb-4">tech</h1> -->
                 <div class="pb-4 pt-4">
-                  <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
-                    <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
-                  </a>
+                  <img class="stack-icon p-1" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
                 </div>
               </div>
               <a
@@ -248,10 +244,8 @@
                 <h1>RoboFriends</h1>
                 <p>Basic react app w/ search feature</p>
                 <div class="flex justify-center items-center pb-3 pt-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
                   <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
-              </div>
+                </div>
               <div class="card-buttons">
                 <a
                   rel="noreferrer"
@@ -285,12 +279,8 @@
               <h1>Ematchi</h1>
               <p>Svelte matching memory game</p>
               <div class="flex justify-center items-center pb-3">
-                <a href="https://svelte.dev/" target="_blank" rel="noreferrer" title="Svelte">
-                  <img class="stack-icon" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
-                </a>
-                <a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer" title="TypeScript">
-                  <img class="stack-icon" src="./assets/icons/ts-icon.svg" alt="TypeScript Icon"/>
-                </a>
+                <img class="stack-icon p-1" src="./assets/icons/svelte-icon.png" alt="Svelte Icon"/>
+                <img class="stack-icon" src="./assets/icons/ts-icon.svg" alt="TypeScript Icon"/>
               </div>
               <div class="card-buttons">
                 <a
@@ -324,12 +314,8 @@
               <h1>Memento</h1>
               <p>React matching memory game</p>
               <div class="flex justify-center items-center pb-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
-                <a href="https://firebase.google.com" target="_blank" rel="noreferrer" title="Firebase">
-                  <img class="stack-icon p-2" src="./assets/icons/firebase-icon.svg" alt="Firebase Icon"/>
-                </a>
+                <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
+                <img class="stack-icon p-2" src="./assets/icons/firebase-icon.svg" alt="Firebase Icon"/>
               </div>
               <div class="card-buttons">
                 <a
@@ -363,15 +349,9 @@
               <h1>Portfolio</h1>
               <p>The site you're on</p>
               <div class="flex justify-center items-center pb-3">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noreferrer" title="HTML">
                   <img class="stack-icon p-1" src="./assets/icons/html-icon.svg" alt="HTML Icon"/>
-                </a>
-                <a href="https://sass-lang.com/" target="_blank" rel="noreferrer" title="Sass">
                   <img class="stack-icon w-5" src="./assets/icons/sass-icon.png" alt="Sass Icon"/>
-                </a>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer" title="JS">
                   <img class="stack-icon" src="./assets/icons/js-icon.svg" alt="JS Icon"/>
-                </a>
               </div>
               <div class="card-buttons">
                 <a
@@ -405,9 +385,7 @@
               <h1>Instaquote</h1>
               <p>React quote "generator"</p>
               <div class="flex justify-center items-center pb-3 pt-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
+                <img class="stack-icon" src="./assets/icons/react-icon.svg" alt="React Icon"/>
               </div>
               <div class="card-buttons">
                 <a
@@ -442,9 +420,7 @@
               <h1>Project 6</h1>
               <p>Lorem ipsum dolor sit amet</p>
               <div class="flex justify-center items-center pb-3">
-                <a href="https://react.dev/" target="_blank" rel="noreferrer" title="React">
-                  <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
-                </a>
+                <img class="stack-icon w-5" src="./assets/icons/react-icon.svg" alt="React Icon"/>
               </div>
               <div class="card-buttons">
                 <a
