added doctype to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
     <meta charset="utf-8" />
@@ -7,7 +8,7 @@
 
     <title>Clayton King | Web Developer</title>
     <meta name="keywords" content="clay-k0, Clayton King, Developer" />
-    <meta name="description" content="Clayton King" />
+    <meta name="description" content="Clayton King Portfolio" />
 
     <link
       rel="stylesheet"
@@ -512,3 +513,4 @@
     </script>
   </body>
 </html>
+
