--- a/src/index.html
+++ b/src/index.html
@@ -67,10 +67,9 @@
                 <img
                   alt="Profile Image"
                   class="img-fluid rounded shadow-lg"
-                  height="auto"
+                  height="400px"
                   width="400px"
-                  src="#"
-                  alt="Profile Image"
+                  src="./assets/me.jpg"
                 />
               </div>
             </div>
