--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
     <div class="navbar">
       <a href="/" class="site-logo">ck</a>
       <ul class="nav-items">
-        <li><a href="/#about">About</a></li>
-        <li><a href="/#projects">Projects</a></li>
-        <li><a href="/#contact">Contact</a></li>
+        <li><a href="/#about">about</a></li>
+        <li><a href="/#projects">projects</a></li>
+        <li><a href="/#contact">contact</a></li>
       </ul>
     </div>
 
@@ -38,7 +38,7 @@
     <section id="hero" class="jumbotron load-hidden">
       <div class="container">
         <h1 class="hero-title">
-          Hello, I'm <span class="text-color-main">Clayton King</span>,
+          hello, i'm <span class="text-color-main">clayton king</span>,
             <br />
             a computer science student.
         </h1>
@@ -238,9 +238,9 @@
 
     <footer class="footer navbar-static-bottom">
       <div class="container">
-        <a rel="noreferrer" href="#top" class="back-to-top">
-          <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-        </a>
+    <a rel="noreferrer" href="#top" class="back-to-top" title="Back to Top">
+      <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+    </a>
         <hr />
 
         <p class="footer__text">
