--- a/src/index.html
+++ b/src/index.html
@@ -34,17 +34,16 @@
       </ul>
     </div>
 
-
     <section id="hero" class="jumbotron load-hidden">
       <div class="container">
         <h1 class="hero-title">
-          hello, i'm <span class="text-color-main">clayton king</span>,
+          Hello, I'm <span class="text-color-main">Clayton King</span>,
             <br />
             a computer science student.
         </h1>
         <p class="hero-cta">
           <a rel="noreferrer" class="cta-btn cta-btn--main" href="#about">
-            about me
+            About Me
           </a>
         </p>
       </div>
@@ -88,7 +87,7 @@
 
                 <span class="d-flex mb-3">
                   <a class="cta-btn cta-btn--main mx-2" href="#projects">
-                    view projects
+                    View Projects
                   </a>
                   <a
                     rel="noreferrer"
@@ -96,7 +95,7 @@
                     class="cta-btn cta-btn--main mx-2"
                     href="assets/resume.pdf"
                   >
-                    view resume
+                    View Resume
                   </a>
                 </span>
               </div>
@@ -126,7 +125,7 @@
                   class="cta-btn cta-btn--main"
                   href="https://github.com/clay-k0/"
                 >
-                  view source
+                  View Source
                 </a>
                 <!-- <a -->
                 <!--   rel="noreferrer" -->
@@ -178,7 +177,7 @@
                   class="cta-btn cta-btn--main"
                   href="https://github.com/clay-k0"
                 >
-                  view source
+                  View Source
                 </a>
                 <!-- <a -->
                 <!--   rel="noreferrer" -->
@@ -223,14 +222,14 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper ">
           <p class="contact-wrapper__text">
-            feel free to reach out to me at any time!
+            Feel free to reach out to me at any time!
           </p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--main"
             href="mailto:claytonking03@gmail.com"
-            >email me</a
+            >Email Me</a
           >
         </div>
       </div>
