--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
     <div class="navbar">
       <a href="/" class="site-logo">ck</a>
       <ul class="nav-items">
-        <li><a href="/#about">about</a></li>
-        <li><a href="/#projects">projects</a></li>
-        <li><a href="/#contact">contact</a></li>
+        <li><a href="/#about">About</a></li>
+        <li><a href="/#projects">Projects</a></li>
+        <li><a href="/#contact">Contact</a></li>
       </ul>
     </div>
 
