--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project2.jpg"
                     />
                   </div>
                 </a>
@@ -207,7 +207,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project2.jpg"
                     />
                   </div>
                 </a>
